--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18",
-    "nuxt": "^3.6.1",
+    "nuxt": "3.6.5",
     "nuxt-icon": "^0.5.0"
   },
   "overrides": {
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "^0.4.11",
     "firebase": "^10.0.0",
     "firebase-admin": "^11.10.1",
+    "highlight.js": "^11.8.0",
     "pinia": "^2.1.4"
   }
 }
